--- a/css/style.css
+++ b/css/style.css
@@ -3,69 +3,72 @@
 	padding: 0;
 }
 
-.arriere-plan {
-	width: 100%;
-	height: 600px;
-	display: inline-block;
+body {
+	background-color: black;
 }
 
 .menu-header {
 	margin: auto;
 	width: 900px;
-	height: 75px;
-	background-color: rgba(0,0,0,0.6);
+	height: 100px;
+	background-color: #131313;
 	margin-top: 50px;
-	
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: bold;
+	border: 1px solid #DA491C;
 }
 
 .bitcoin {
-	width: 60px;
-	height: 100%;
-	background-color: rgba(0,0,0,0.5);
+	width: 65px;
+	height: 84%;
+	background-color: #0b0b0b;
 	float: left;
 	text-align: center;
+	border-right: solid #DA491C 1px;
+    padding-top: 16px;
 }
 
 .vague {
-	width: 80px;
 	height: 100%;
 	float: left;
-	line-height: 75px;
-	margin-left: 10px;
+	line-height: 100px;
+	padding-left: 40px;
+	padding-right: 110px;
+	font-size: 18px;
+	border-right: solid #DA491C 1px;
 }
 
 .person {
-	width: 60px;
+	width: 65px;
 	height: 100%;
-	background-color: rgba(0,0,0,0.5);
+	background-color: #0b0b0b;
 	float: left;
 	margin-left: 0px;
 	text-align: center;
-	border-right: solid black 1px;
-}
-
-.person:first-child {
-	margin-left: 150px;
+	border-right: solid #DA491C 1px;
 }
 
 .menu {
 	width: 120px;
 	height: 100%;
-	background-color: red;
+	background-color: #0b0b0b;
 	float: right;
 	text-align: center;
 	font-size: 25px;
-	line-height: 75px;
+	line-height: 100px;
+	border-left: solid #DA491C 1px;
 }
 
-.plateau-contour {
+.boardgame {
 	margin: auto;
 	width: 900px;
 	height:500px;
 	margin-top: 30px;
+	border: 1px solid #DA491C;
 }
 
-.ligne {
+.line {
 	width: 100%;
 	height: 100px;
 	display: block;
@@ -73,17 +76,15 @@
 }
 
 .case {
-
-width: 100px;
-height: 100%;
-float: left;
-
+	width: 100px;
+	height: 100%;
+	float: left;
 }
 
 .case-impair {
-	background-color: yellow;
+	background-color: #484848;
 }
 
 .case-pair {
-	background-color: grey;
+	background-color: #808080;
 }
