--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 }
 
 body {
-	background-color: black;
+	background-color: white;
+	color: white;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: bold;
 }
 
 .menu-header {
@@ -12,52 +15,86 @@ body {
 	width: 900px;
 	height: 100px;
 	background-color: #131313;
-	margin-top: 50px;
-	color: white;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: bold;
 	border: 1px solid #DA491C;
 }
 
 .bitcoin {
-	width: 65px;
-	height: 84%;
-	background-color: #0b0b0b;
-	float: left;
-	text-align: center;
-	border-right: solid #DA491C 1px;
-    padding-top: 16px;
+	height: 77%;
+    background-color: #0b0b0b;
+    float: left;
+    text-align: center;
+    border-right: solid #DA491C 1px;
+    padding-top: 23px;
+    padding-left: 25px;
+    padding-right: 25px;
+    min-width: 100px;
 }
 
-.vague {
+.bitcoin .value {
+	float: right;
+    margin-right: 10px;
+    vertical-align: middle;
+    line-height: 55px;
+}
+
+.bitcoin img {
+	width: 40px;
+    height: 40px;
+    margin-top: 8px;
+    float: left;
+}
+
+.vague, .attacks {
 	height: 100%;
-	float: left;
-	line-height: 100px;
-	padding-left: 40px;
-	padding-right: 110px;
-	font-size: 18px;
-	border-right: solid #DA491C 1px;
+    float: left;
+    line-height: 100px;
+    padding-left: 60px;
+    padding-right: 60px;
+    font-size: 18px;
+    border-right: solid #DA491C 1px;
 }
 
-.person {
-	width: 65px;
+
+.menu {
+	width: 20%;
+    height: 100%;
+    background-color: #0b0b0b;
+    float: right;
+    text-align: center;
+    font-size: 25px;
+    line-height: 100px;
+    border-left: solid #DA491C 1px;
+}
+
+.menu-person {
+	margin: auto;
+	width: 1800px;
+	height: 100%;
+	background-color: #131313;
+	border: 1px solid #DA491C;
+}
+
+ul {
+	display: inline-block;
+    height: 100px;
+    width: 100%;
+}
+
+li.person {
+	width: 59px;
 	height: 100%;
 	background-color: #0b0b0b;
 	float: left;
 	margin-left: 0px;
 	text-align: center;
 	border-right: solid #DA491C 1px;
+	list-style: none;
 }
 
-.menu {
-	width: 120px;
-	height: 100%;
-	background-color: #0b0b0b;
-	float: right;
-	text-align: center;
-	font-size: 25px;
-	line-height: 100px;
-	border-left: solid #DA491C 1px;
+li.person img {
+	width:40px;
+	height:70px;
+	margin-top:5px;
 }
 
 .boardgame {
@@ -66,6 +103,7 @@ body {
 	height:500px;
 	margin-top: 30px;
 	border: 1px solid #DA491C;
+	clear: both;
 }
 
 .line {
