--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ body {
     padding-right: 60px;
     font-size: 18px;
     border-right: solid #DA491C 1px;
+    border-left: solid #DA491C 1px;
+    margin-left: 9px;
 }
 
 
